2001-11-11  Edward Avis,  <epa98@voxel21>

	* MOVING TO CVS.  All changes from now on will be recorded as
        CVS log messages (those immediately below already are).

	* listings_to_latex, getlistings_uk_ananova:
	Added prototype declarations.

	* getlistings_ca, ClickListings.pm:
	Use scalar(@array) or just @array rather than the
	deprecated defined(@array).

2001-10-29  Edward Avis,  <epa98@voxel21>

	* getlistings_uk_ananova: Removed some duplicate warnings.

2001-10-20  Edward Avis,  <epa98@voxel21>

	* getlistings_ca: New file.

	* ClickListings.pm:
	clicktv.com has stopped working, so go back to getlistings_ca.

2001-09-14  Edward Avis,  <epa98@voxel21>

	* ClickListings.pm:
	Latest version from Jerry (just in time for 0.2.10).

	* README: Version 0.2.10.

	* xmltv.dtd:
	Version 0.3.1 (really I should have been updating this number more
	often).

	* getlistings_uk_ananova:
	Include Ananova's copyright message as a comment in the output.

	* channels.dtd: A channel can have zero or more URLs.

	* channels.dtd:
	Added source- and generator- attributes like those we already have for
	xmltv.dtd.

	* xmltv.dtd: Added an example of 'star-rating'.

	* xmltv.dtd:
	Added 'star-rating' to programme elements.  Three stars out of five,
	etc.

	* getlistings_na: Latest version from Jerry.

	* sort_listings:
	clumpidx_cmp(): call variables $A and $B, not their lowercase
	equivalents which are somewhat special in Perl.

	* getlistings_uk_ananova:
	Add 'source' attribute to generated listings (for debugging);
	fixed mistyped channel id.

	* XMLTV.pm: Added 'source' as a comment (used for debugging).

2001-09-01  Edward Avis,  <epa98@voxel21>

	* getlistings_nl:
	Added second email address, to avoid losing contact with author.

2001-08-14  Edward Avis,  <epa98@voxel21>

	* mkdist: Remove attic/RCS/ directory.

	* XMLTV.pm:
	Added read_credits(), which returns a hash of the <tv> element's
	attributes.

	* listings_to_latex: