@@ -1,5 +1,7 @@
 XMLTV 0.2.10
 
+$Id: README,v 1.16 2001/11/11 22:30:20 jveldhuis Exp $
+
 Suite of programs for processing TV listings and organizing your
 viewing.
 
@@ -27,6 +29,9 @@ Redan, and Jerry Veldhuis.
 
 -- Ed Avis, epa98@doc.ic.ac.uk, 2001-09-14
 $Log: README,v $
+Revision 1.16  2001/11/11 22:30:20  jveldhuis
+added \$Id \$ as approprate
+
 Revision 1.15  2001/11/11 16:44:19  epaepa
 Whoops, just realized that the last changelog message would itself get
 keyword-expanded, causing no end of confusion.  I had to perform some
