@@ -1,3 +1,6 @@
+
+$Id: README.channels,v 1.5 2001/11/11 22:30:20 jveldhuis Exp $
+
 The two listings-grabbers write a channels.xml file to map between
 internal channel IDs and pretty names.  The format of the file is by
 Gottfried Szing.  There are a couple of interfaces to these files -
@@ -7,6 +10,9 @@ write it out again.
 
 -- Ed Avis, epa98@doc.ic.ac.uk, 2001-08-14
 $Log: README.channels,v $
+Revision 1.5  2001/11/11 22:30:20  jveldhuis
+added \$Id \$ as approprate
+
 Revision 1.4  2001/11/11 16:44:19  epaepa
 Whoops, just realized that the last changelog message would itself get
 keyword-expanded, causing no end of confusion.  I had to perform some
