@@ -1,5 +1,7 @@
 <!-- DTD for channel name translations 
 
+$Id: channels.dtd,v 1.6 2001/11/11 22:30:20 jveldhuis Exp $
+
 Author: Gottfried Szing, suggestions by Ed Avis
 
 Suggestions and problems please mail to goofy@yasd.dhs.org or
@@ -31,6 +33,9 @@ allocated, and the same number might be used for a different channel
 somewhere else.
 
 $Log: channels.dtd,v $
+Revision 1.6  2001/11/11 22:30:20  jveldhuis
+added \$Id \$ as approprate
+
 Revision 1.5  2001/11/11 16:44:19  epaepa
 Whoops, just realized that the last changelog message would itself get
 keyword-expanded, causing no end of confusion.  I had to perform some
