@@ -1,6 +1,11 @@
 * Coding standards for XMLTV
 
+$id: $
+
 $Log: coding_standards,v $
+Revision 1.2  2001/11/11 22:30:20  jveldhuis
+added \$Id \$ as approprate
+
 Revision 1.1  2001/11/11 18:04:14  epaepa
 Added coding standards document, prompted by my edict on the mailing
 list about the format of CVS log messages.  Of course I will now look
