@@ -1,5 +1,7 @@
 #!/usr/bin/perl -w
 # 
+# $Id: filter_shown,v 1.7 2001/11/11 22:30:20 jveldhuis Exp $
+#
 # filter_shown
 # 
 # Filter TV listings, removing programmes that would have already
@@ -13,6 +15,9 @@
 # -- Ed Avis, epa98@doc.ic.ac.uk, 2000-06-27
 # 
 # $Log: filter_shown,v $
+# Revision 1.7  2001/11/11 22:30:20  jveldhuis
+# added \$Id \$ as approprate
+#
 # Revision 1.6  2001/11/11 16:44:19  epaepa
 # Whoops, just realized that the last changelog message would itself get
 # keyword-expanded, causing no end of confusion.  I had to perform some
