@@ -1,8 +1,13 @@
 #!/usr/bin/perl -w
 # 
+# $Id: getlistings_uk_ananova,v 1.13 2001/11/11 22:30:20 jveldhuis Exp $
+#
 # Fetch UK television listings from the data provided by ananova.com.
 # 
 # $Log: getlistings_uk_ananova,v $
+# Revision 1.13  2001/11/11 22:30:20  jveldhuis
+# added \$Id \$ as approprate
+#
 # Revision 1.12  2001/11/11 16:44:19  epaepa
 # Whoops, just realized that the last changelog message would itself get
 # keyword-expanded, causing no end of confusion.  I had to perform some
