@@ -1,5 +1,7 @@
 #!/usr/bin/perl -w
 # 
+# $Id: listings_to_latex,v 1.13 2001/11/11 22:30:20 jveldhuis Exp $
+#
 # listings_to_latex
 # 
 # Convert TV listings to LaTeX source.
@@ -10,6 +12,9 @@
 # filename is given.  LaTeX source will be written to stdout.
 # 
 # $Log: listings_to_latex,v $
+# Revision 1.13  2001/11/11 22:30:20  jveldhuis
+# added \$Id \$ as approprate
+#
 # Revision 1.12  2001/11/11 16:44:19  epaepa
 # Whoops, just realized that the last changelog message would itself get
 # keyword-expanded, causing no end of confusion.  I had to perform some
