@@ -1,9 +1,14 @@
 #!/bin/sh
 # 
+# $Id: mkdist,v 1.4 2001/11/11 22:30:20 jveldhuis Exp $
+#
 # Make a distribution tarball from a working copy.  Not very well
 # written; all those rm -rfs might be dangerous.
 # 
 # $Log: mkdist,v $
+# Revision 1.4  2001/11/11 22:30:20  jveldhuis
+# added \$Id \$ as approprate
+#
 # Revision 1.3  2001/11/11 16:44:19  epaepa
 # Whoops, just realized that the last changelog message would itself get
 # keyword-expanded, causing no end of confusion.  I had to perform some
