@@ -1,5 +1,7 @@
 #!/usr/bin/perl -wT
 # 
+# $Id: pick_cgi,v 1.12 2001/11/11 22:30:20 jveldhuis Exp $
+#
 # pick.cgi
 # 
 # Web page for the user to pick which programmes he wants to watch.
@@ -69,6 +71,9 @@
 # as if it does not exist at all!
 # 
 # $Log: pick_cgi,v $
+# Revision 1.12  2001/11/11 22:30:20  jveldhuis
+# added \$Id \$ as approprate
+#
 # Revision 1.11  2001/11/11 16:44:19  epaepa
 # Whoops, just realized that the last changelog message would itself get
 # keyword-expanded, causing no end of confusion.  I had to perform some
