@@ -1,5 +1,7 @@
 #!/usr/bin/perl -w
 # 
+# $Id: sort_listings,v 1.7 2001/11/11 22:30:20 jveldhuis Exp $
+#
 # sort_listings
 # 
 # Sort the programmes in an XMLTV file according to:
@@ -13,6 +15,9 @@
 # Usage: sort_listings [filename]
 # 
 # $Log: sort_listings,v $
+# Revision 1.7  2001/11/11 22:30:20  jveldhuis
+# added \$Id \$ as approprate
+#
 # Revision 1.6  2001/11/11 16:44:19  epaepa
 # Whoops, just realized that the last changelog message would itself get
 # keyword-expanded, causing no end of confusion.  I had to perform some
