@@ -1,5 +1,7 @@
 <!-- DTD for TV listings
 
+$id: $
+
 This is a DTD to represent a TV listing.  Rather than breaking the
 listing up by channel, it mixes all the channels together.  Data about
 a TV programme are stored in the subelements of element 'programme',
@@ -51,6 +53,9 @@ explicit timezone is given, UT is assumed.  Examples:
 Version 0.3.1 (xmltv-0.2.10)
 
 $Log: xmltv.dtd,v $
+Revision 1.10  2001/11/11 22:30:20  jveldhuis
+added \$Id \$ as approprate
+
 Revision 1.9  2001/11/11 16:44:19  epaepa
 Whoops, just realized that the last changelog message would itself get
 keyword-expanded, causing no end of confusion.  I had to perform some
