@@ -1,3 +1,8 @@
+
+#
+# $Id: ChangeLog.old,v 1.3 2001/11/11 22:30:20 jveldhuis Exp $
+#
+
 2001-11-11  Edward Avis,  <epa98@voxel21>
 
 	* MOVING TO CVS.  All changes from now on will be recorded as
